--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "author": "armandsalle <armand.salle@gmail.com>",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -12,17 +13,20 @@
   },
   "devDependencies": {
     "eslint": "^8.7.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "jquery": "^3.6.0",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
-    "vite": "^2.7.2",
+    "vite": "^4.1.1",
     "vite-plugin-eslint": "^1.3.0",
-    "eslint-config-prettier": "^8.3.0"
+    "vite-plugin-glsl": "^1.1.2"
   },
   "dependencies": {
-    "gsap": "^3.9.1"
+    "dat.gui": "^0.7.9",
+    "gsap": "^3.11.4",
+    "three": "^0.149.0"
   }
 }
