--- a/package.json
+++ b/package.json
@@ -7,25 +7,18 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "deploy": "gh-pages -d dist",
     "preview": "vite preview",
-    "clean": "rimraf -rf dist",
-    "lint:fix": "eslint ./src --ext .js,.jsx --fix"
+    "clean": "rimraf -rf dist"
   },
   "devDependencies": {
-    "eslint": "^8.7.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
-    "jquery": "^3.6.0",
-    "prettier": "^2.5.1",
-    "rimraf": "^3.0.2",
     "vite": "^4.1.1",
     "vite-plugin-eslint": "^1.3.0",
     "vite-plugin-glsl": "^1.1.2"
   },
   "dependencies": {
     "dat.gui": "^0.7.9",
+    "gh-pages": "^5.0.0",
     "gsap": "^3.11.4",
     "three": "^0.149.0"
   }
