--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "deploy": "vite build gh-pages -d dist",
-    "preview": "vite preview",
-    "clean": "rimraf -rf dist"
+    "preview": "vite preview"
   },
   "devDependencies": {
     "vite": "^4.1.1",
