--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^4.1.1",
-    "vite-plugin-eslint": "^1.3.0",
-    "vite-plugin-glsl": "^1.1.2"
+    "vite": "^4.1.1"
   },
   "dependencies": {
     "dat.gui": "^0.7.9",
     "gh-pages": "^5.0.0",
     "gsap": "^3.11.4",
-    "three": "^0.149.0"
+    "three": "^0.149.0",
+    "vite-plugin-glsl": "^1.1.2"
   }
 }
